force-app/main/default/objects/Routine__c/Routine__c.object-meta.xml
<CustomObject>
    <description>Objeto para gestionar las rutinas que se van haciendo día tras día</description>
    <label>Routine</label>
    <nameField>
        <label>Routine Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>