force-app/main/default/objects/Routine__c/fields/Exercise__c.field-meta.xml
<CustomField>
    <fullName>Exercise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Ejercicio al que esta atado la rutina</description>
    <label>Exercise</label>
    <referenceTo>Exercise__c</referenceTo>
    <relationshipLabel>Routines</relationshipLabel>
    <relationshipName>Routines</relationshipName>
    <type>Lookup</type>
</CustomField>