force-app/main/default/objects/Routine__c/fields/Repetitions__c.field-meta.xml
<CustomField>
    <fullName>Repetitions__c</fullName>
    <description>Repeticiones del ejercicio</description>
    <label>Repetitions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>