force-app/main/default/objects/Routine__c/fields/Rest_Sec__c.field-meta.xml
<CustomField>
    <fullName>Rest_Sec__c</fullName>
    <description>Descanso entre repeticiones (es dado en segundos)</description>
    <label>Rest (Sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>