force-app/main/default/objects/Routine__c/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <description>Series de ejercicios por repeticiones</description>
    <label>Series</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>